--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ function previewImage() {
 }
 
 // 🔥 CORE OPTIMIZATION LOGIC
-function optimizeImage(file) {
+function optimizeImage(file, showPreview = false) {
   const img = new Image();
   img.src = URL.createObjectURL(file);
 
@@ -132,28 +132,35 @@ function optimizeImage(file) {
     const canvas = document.createElement("canvas");
     const ctx = canvas.getContext("2d");
 
-    const MAX_SIZE = 1024;
-    let width = img.width;
-    let height = img.height;
+    const MAX = 1024;
+    let w = img.width;
+    let h = img.height;
 
-    if (width > height && width > MAX_SIZE) {
-      height *= MAX_SIZE / width;
-      width = MAX_SIZE;
-    } else if (height > MAX_SIZE) {
-      width *= MAX_SIZE / height;
-      height = MAX_SIZE;
+    if (w > h && w > MAX) {
+      h *= MAX / w;
+      w = MAX;
+    } else if (h > MAX) {
+      w *= MAX / h;
+      h = MAX;
     }
 
-    canvas.width = width;
-    canvas.height = height;
-    ctx.drawImage(img, 0, 0, width, height);
+    canvas.width = w;
+    canvas.height = h;
+    ctx.drawImage(img, 0, 0, w, h);
 
     canvas.toBlob(blob => {
       optimizedImageBlob = blob;
-      console.log("Optimized size:", (blob.size / 1024 / 1024).toFixed(2), "MB");
-    }, "image/jpeg", 0.75);
+
+      if (showPreview) {
+        const preview = document.getElementById("preview");
+        preview.src = URL.createObjectURL(blob);
+        preview.style.display = "block";
+      }
+
+    }, "image/jpeg", 0.7);
   };
 }
+
 
 async function sendMessage() {
   const text = document.getElementById("text").value;
@@ -187,4 +194,5 @@ async function sendMessage() {
 
 </body>
 </html>
+
 
