--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Product Image Description Bot</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Product Description Bot</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
     * {
       box-sizing: border-box;
@@ -17,7 +16,7 @@
     body {
       min-height: 100vh;
       background:
-        linear-gradient(rgba(2,6,23,0.75), rgba(2,6,23,0.85)),
+        linear-gradient(rgba(2,6,23,0.85), rgba(2,6,23,0.9)),
         url("https://cdn.wallpapersafari.com/8/15/DRoHpE.jpg");
       background-size: cover;
       background-position: center;
@@ -25,106 +24,388 @@
       color: #e5e7eb;
       display: flex;
       flex-direction: column;
+    }
+
+    .header {
+      padding: 20px 24px;
+      background: rgba(2,6,23,0.7);
+      backdrop-filter: blur(12px);
+      border-bottom: 1px solid rgba(255,255,255,0.1);
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    .header-icon {
+      width: 40px;
+      height: 40px;
+      border-radius: 10px;
+      overflow: hidden;
+      border: 2px solid rgba(37, 99, 235, 0.5);
+    }
+
+    .header-icon img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .header h1 {
+      font-size: 20px;
+      font-weight: 600;
+    }
+
+    .chat-container {
+      flex: 1;
+      overflow-y: auto;
+      padding: 24px;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+      max-width: 900px;
+      width: 100%;
+      margin: 0 auto;
+    }
+
+    .message {
+      display: flex;
+      gap: 12px;
+      animation: slideIn 0.3s ease-out;
+    }
+
+    @keyframes slideIn {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .message.user {
+      flex-direction: row-reverse;
+    }
+
+    .message-avatar {
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      flex-shrink: 0;
+      display: flex;
       align-items: center;
       justify-content: center;
-    }
-
-    .chat-box {
-      width: 440px;
-      padding: 28px;
-      border-radius: 18px;
-      backdrop-filter: blur(14px);
-      background: transparent;
-    }
-
-    .bot-header {
-      text-align: center;
-      margin-bottom: 18px;
-    }
-
-    .bot-header img {
-      width: 90px;
-      margin-bottom: 10px;
-    }
-
-    input, button {
-      width: 100%;
-      margin-top: 12px;
-      padding: 12px;
-      border-radius: 8px;
-      border: none;
-      background: #020617;
-      color: #e5e7eb;
+      font-weight: 600;
       font-size: 14px;
     }
 
-    button {
+    .message.user .message-avatar {
       background: linear-gradient(135deg, #2563eb, #1d4ed8);
-      font-weight: 600;
-      cursor: pointer;
-      margin-top: 18px;
     }
 
-    #preview {
+    .message.bot .message-avatar {
+      background: rgba(15, 23, 42, 0.8);
+      border: 2px solid rgba(5, 150, 105, 0.3);
+      overflow: hidden;
+    }
+
+    .message.bot .message-avatar img {
       width: 100%;
-      margin-top: 12px;
-      border-radius: 10px;
-      display: none;
+      height: 100%;
+      object-fit: cover;
     }
 
-    .reply {
-      margin-top: 18px;
-      padding: 12px;
-      background: #020617;
-      border-radius: 8px;
-      min-height: 70px;
+    .message-content {
+      max-width: 70%;
+      padding: 12px 16px;
+      border-radius: 16px;
+      line-height: 1.5;
       white-space: pre-wrap;
     }
 
-    footer {
-      margin-top: 22px;
+    .message.user .message-content {
+      background: linear-gradient(135deg, #2563eb, #1d4ed8);
+      border-bottom-right-radius: 4px;
+    }
+
+    .message.bot .message-content {
+      background: rgba(15, 23, 42, 0.8);
+      backdrop-filter: blur(8px);
+      border: 1px solid rgba(255,255,255,0.1);
+      border-bottom-left-radius: 4px;
+    }
+
+    .message-image {
+      max-width: 300px;
+      border-radius: 12px;
+      margin-top: 8px;
+    }
+
+    .input-area {
+      padding: 20px 24px;
+      background: rgba(2,6,23,0.7);
+      backdrop-filter: blur(12px);
+      border-top: 1px solid rgba(255,255,255,0.1);
+    }
+
+    .input-container {
+      max-width: 900px;
+      margin: 0 auto;
+      display: flex;
+      gap: 8px;
+      align-items: flex-end;
+    }
+
+    .input-wrapper {
+      flex: 1;
+      background: rgba(15, 23, 42, 0.9);
+      border: 1px solid rgba(255,255,255,0.1);
+      border-radius: 24px;
+      padding: 12px 16px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      transition: all 0.2s;
+    }
+
+    .input-wrapper:focus-within {
+      border-color: #2563eb;
+      box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
+    }
+
+    .image-preview-container {
+      position: relative;
+      display: none;
+      margin-right: 8px;
+    }
+
+    .image-preview-container.active {
+      display: block;
+    }
+
+    .preview-image {
+      width: 60px;
+      height: 60px;
+      border-radius: 8px;
+      object-fit: cover;
+    }
+
+    .remove-image {
+      position: absolute;
+      top: -6px;
+      right: -6px;
+      width: 20px;
+      height: 20px;
+      border-radius: 50%;
+      background: #ef4444;
+      border: 2px solid rgba(15, 23, 42, 0.9);
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       font-size: 12px;
-      color: #94a3b8;
+      font-weight: bold;
+    }
+
+    .input-wrapper textarea {
+      flex: 1;
+      background: transparent;
+      border: none;
+      outline: none;
+      color: #e5e7eb;
+      font-size: 15px;
+      resize: none;
+      max-height: 120px;
+      font-family: 'Inter', sans-serif;
+    }
+
+    .input-wrapper textarea::placeholder {
+      color: #64748b;
+    }
+
+    .attach-btn, .send-btn {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      border: none;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 18px;
+      transition: all 0.2s;
+      flex-shrink: 0;
+    }
+
+    .attach-btn {
+      background: transparent;
+      color: #64748b;
+    }
+
+    .attach-btn:hover {
+      background: rgba(255,255,255,0.05);
+      color: #e5e7eb;
+    }
+
+    .send-btn {
+      background: linear-gradient(135deg, #2563eb, #1d4ed8);
+      color: white;
+    }
+
+    .send-btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 4px 12px rgba(37, 99, 235, 0.4);
+    }
+
+    .send-btn:disabled {
+      opacity: 0.5;
+      cursor: not-allowed;
+      transform: scale(1);
+    }
+
+    .empty-state {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 16px;
+      color: #64748b;
+    }
+
+    .empty-state-icon {
+      font-size: 64px;
+    }
+
+    .empty-state h2 {
+      font-size: 24px;
+      font-weight: 600;
+      color: #e5e7eb;
+    }
+
+    .empty-state p {
+      font-size: 14px;
+    }
+
+    input[type="file"] {
+      display: none;
+    }
+
+    .typing-indicator {
+      display: flex;
+      gap: 4px;
+      padding: 12px;
+    }
+
+    .typing-dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background: #64748b;
+      animation: typing 1.4s infinite;
+    }
+
+    .typing-dot:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+
+    .typing-dot:nth-child(3) {
+      animation-delay: 0.4s;
+    }
+
+    @keyframes typing {
+      0%, 60%, 100% {
+        opacity: 0.3;
+        transform: scale(0.8);
+      }
+      30% {
+        opacity: 1;
+        transform: scale(1);
+      }
     }
   </style>
 </head>
-
 <body>
 
-<div class="chat-box">
-  <div class="bot-header">
-    <img src="https://cdn.wallpapersafari.com/8/15/DRoHpE.jpg" />
-    <h2>Product Image Description Bot</h2>
+<div class="header">
+  <div class="header-icon">
+    <img src="https://cdn.wallpapersafari.com/8/15/DRoHpE.jpg" alt="Robot" />
   </div>
-
-  <input type="text" id="text" placeholder="Ask something about the product..." />
-  <input type="file" id="image" accept="image/*" onchange="previewImage()" />
-
-  <img id="preview" />
-  <button onclick="sendMessage()">Generate Response</button>
-
-  <div class="reply" id="reply"></div>
+  <h1>AI Product Description Bot</h1>
 </div>
 
-<footer>Built with ❤️ by <span>Gatik</span></footer>
+<div class="chat-container" id="chatContainer">
+  <div class="empty-state">
+    <div class="empty-state-icon">💬</div>
+    <h2>Start a Conversation</h2>
+    <p>Hey Whats On Your's Mind</p>
+  </div>
+</div>
+
+<div class="input-area">
+  <div class="input-container">
+    <div class="input-wrapper">
+      <div class="image-preview-container" id="previewContainer">
+        <img class="preview-image" id="previewImage" />
+        <div class="remove-image" onclick="removeImage()">×</div>
+      </div>
+      <textarea 
+        id="messageInput" 
+        placeholder="Upload a product image or chat with the product analyzer to explore details, features, and use cases…..."
+        rows="1"
+        onkeydown="handleKeyPress(event)"
+        oninput="autoResize(this)"
+      ></textarea>
+      <button class="attach-btn" onclick="document.getElementById('fileInput').click()">
+        <span>+</span>
+      </button>
+    </div>
+    <button class="send-btn" id="sendBtn" onclick="sendMessage()">
+      <span>➤</span>
+    </button>
+  </div>
+</div>
+
+<input type="file" id="fileInput" accept="image/*" onchange="handleFileSelect()" />
 
 <script>
 let optimizedImageBlob = null;
+let conversationHistory = [];
 
-function previewImage() {
-  const file = document.getElementById("image").files[0];
-  const preview = document.getElementById("preview");
+function autoResize(textarea) {
+  textarea.style.height = 'auto';
+  textarea.style.height = textarea.scrollHeight + 'px';
+}
 
+function handleKeyPress(event) {
+  if (event.key === 'Enter' && !event.shiftKey) {
+    event.preventDefault();
+    sendMessage();
+  }
+}
+
+function handleFileSelect() {
+  const file = document.getElementById("fileInput").files[0];
   if (!file) return;
 
-  preview.src = URL.createObjectURL(file);
-  preview.style.display = "block";
+  const previewContainer = document.getElementById("previewContainer");
+  const previewImage = document.getElementById("previewImage");
+
+  previewImage.src = URL.createObjectURL(file);
+  previewContainer.classList.add("active");
 
   optimizeImage(file);
 }
 
-// 🔥 CORE OPTIMIZATION LOGIC
-function optimizeImage(file, showPreview = false) {
+function removeImage() {
+  const previewContainer = document.getElementById("previewContainer");
+  previewContainer.classList.remove("active");
+  optimizedImageBlob = null;
+  document.getElementById("fileInput").value = "";
+}
+
+function optimizeImage(file) {
   const img = new Image();
   img.src = URL.createObjectURL(file);
 
@@ -150,28 +431,110 @@ function optimizeImage(file, showPreview = false) {
 
     canvas.toBlob(blob => {
       optimizedImageBlob = blob;
-
-      if (showPreview) {
-        const preview = document.getElementById("preview");
-        preview.src = URL.createObjectURL(blob);
-        preview.style.display = "block";
-      }
-
     }, "image/jpeg", 0.7);
   };
 }
 
+function addMessage(text, isUser, imageUrl = null) {
+  const chatContainer = document.getElementById("chatContainer");
+  const emptyState = chatContainer.querySelector('.empty-state');
+  
+  if (emptyState) {
+    emptyState.remove();
+  }
+
+  const messageDiv = document.createElement("div");
+  messageDiv.className = `message ${isUser ? 'user' : 'bot'}`;
+
+  const avatar = document.createElement("div");
+  avatar.className = "message-avatar";
+  
+  if (isUser) {
+    avatar.textContent = "Y";
+  } else {
+    const img = document.createElement("img");
+    img.src = "https://cdn.wallpapersafari.com/8/15/DRoHpE.jpg";
+    img.alt = "Bot";
+    avatar.appendChild(img);
+  }
+
+  const content = document.createElement("div");
+  content.className = "message-content";
+  
+  if (imageUrl) {
+    const img = document.createElement("img");
+    img.className = "message-image";
+    img.src = imageUrl;
+    content.appendChild(img);
+    if (text) {
+      const textNode = document.createElement("div");
+      textNode.textContent = text;
+      content.appendChild(textNode);
+    }
+  } else {
+    content.textContent = text;
+  }
+
+  messageDiv.appendChild(avatar);
+  messageDiv.appendChild(content);
+  chatContainer.appendChild(messageDiv);
+  chatContainer.scrollTop = chatContainer.scrollHeight;
+}
+
+function addTypingIndicator() {
+  const chatContainer = document.getElementById("chatContainer");
+  const messageDiv = document.createElement("div");
+  messageDiv.className = "message bot";
+  messageDiv.id = "typingIndicator";
+
+  const avatar = document.createElement("div");
+  avatar.className = "message-avatar";
+  
+  const img = document.createElement("img");
+  img.src = "https://cdn.wallpapersafari.com/8/15/DRoHpE.jpg";
+  img.alt = "Bot";
+  avatar.appendChild(img);
+
+  const content = document.createElement("div");
+  content.className = "message-content";
+  content.innerHTML = '<div class="typing-indicator"><div class="typing-dot"></div><div class="typing-dot"></div><div class="typing-dot"></div></div>';
+
+  messageDiv.appendChild(avatar);
+  messageDiv.appendChild(content);
+  chatContainer.appendChild(messageDiv);
+  chatContainer.scrollTop = chatContainer.scrollHeight;
+}
+
+function removeTypingIndicator() {
+  const indicator = document.getElementById("typingIndicator");
+  if (indicator) {
+    indicator.remove();
+  }
+}
 
 async function sendMessage() {
-  const text = document.getElementById("text").value;
-  const replyDiv = document.getElementById("reply");
+  const input = document.getElementById("messageInput");
+  const text = input.value.trim();
+  const sendBtn = document.getElementById("sendBtn");
 
   if (!text && !optimizedImageBlob) {
-    replyDiv.innerText = "Please enter text or upload an image.";
     return;
   }
 
-  replyDiv.innerText = "Thinking...";
+  // Add user message
+  const imageUrl = optimizedImageBlob ? URL.createObjectURL(optimizedImageBlob) : null;
+  addMessage(text || "Uploaded an image", true, imageUrl);
+
+  // Clear input
+  input.value = "";
+  input.style.height = 'auto';
+  removeImage();
+
+  // Disable send button
+  sendBtn.disabled = true;
+
+  // Show typing indicator
+  addTypingIndicator();
 
   const formData = new FormData();
   if (text) formData.append("text", text);
@@ -184,15 +547,17 @@ async function sendMessage() {
     });
 
     const data = await res.json();
-    replyDiv.innerText = data.reply;
+    removeTypingIndicator();
+    addMessage(data.reply, false);
 
-  } catch {
-    replyDiv.innerText = "Error connecting to backend.";
+  } catch (error) {
+    removeTypingIndicator();
+    addMessage("Sorry, I'm having trouble connecting. Please try again.", false);
+  } finally {
+    sendBtn.disabled = false;
   }
 }
 </script>
 
 </body>
 </html>
-
-
